@@ -2,6 +2,7 @@
 
 	* tree.tcl: Fixed some problems with keyboard traversal.  Added
 	support for left/right arrows a la MS Explorer.
+	Added support for keyboard-based scrolling.
 
 1999-10-21  Eric Melski  <ericm@scriptics.com>
 
